tests/final/good/arithmetic/simple.src
fn main() -> int {
    return 2 + 3 * 4;
}
