tests/final/bad/semantic_errors/undefined_variable.src
fn main() -> int {
    return unknown_value;
}
